experiments/cc/b5566488f7f0256b4802ed220b7114bfdcd1b4/error
STDOUT:
=date-time -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wno-comment -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG    -fno-exceptions -fno-rtti -std=c++14 -MD -MT lib/Transforms/Scalar/CMakeFiles/LLVMScalarOpts.dir/SROA.cpp.o -MF lib/Transforms/Scalar/CMakeFiles/LLVMScalarOpts.dir/SROA.cpp.o.d -o lib/Transforms/Scalar/CMakeFiles/LLVMScalarOpts.dir/SROA.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/Scalar/SROA.cpp
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/Scalar/SROA.cpp: In member function ‘bool llvm::SROA::presplitOverlappedSlices(llvm::AllocaInst&, llvm::sroa::AllocaSlices&)’:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/Scalar/SROA.cpp:4306:50: error: too many arguments to function ‘llvm::Align getAdjustedAlignment(llvm::Instruction*, uint64_t)’
           getAdjustedAlignment(LI, PartOffset, DL),
                                                  ^
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/Scalar/SROA.cpp:1670:14: note: declared here
 static Align getAdjustedAlignment(Instruction *I, uint64_t Offset) {
              ^~~~~~~~~~~~~~~~~~~~
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/Scalar/SROA.cpp:4399:50: error: too many arguments to function ‘llvm::Align getAdjustedAlignment(llvm::Instruction*, uint64_t)’
           getAdjustedAlignment(SI, PartOffset, DL),
                                                  ^
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Transforms/Scalar/SROA.cpp:1670:14: note: declared here
 static Align getAdjustedAlignment(Instruction *I, uint64_t Offset) {
              ^~~~~~~~~~~~~~~~~~~~
[1015/2557] Building CXX object lib/MC/MCParser/CMakeFiles/LLVMMCParser.dir/AsmParser.cpp.o
ninja: build stopped: subcommand failed.


STDERR:
CMake Warning at CMakeLists.txt:6 (message):
  Your CMake version is 3.10.2.  Starting with LLVM 12.0.0, the minimum
  version of CMake required to build LLVM will become 3.13.4, and using an
  older CMake will become an error.  Please upgrade your CMake to at least
  3.13.4 now to avoid issues in the future!


-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
33.68user 7.66system 0:25.56elapsed 161%CPU (0avgtext+0avgdata 471728maxresident)k
275768inputs+296288outputs (12major+738046minor)pagefaults 0swaps
